--- a/style.css
+++ b/style.css
@@ -3,8 +3,10 @@ html {
   height: 100%;
   margin: 0;
   padding: 0;
+  font-family: "Ubuntu", sans-serif;
 }
-
+@import url("https://fonts.googleapis.com/css?family=Ubuntu");
+@import url("https://fonts.googleapis.com/css?family=Ubuntu:700");
 /*Верхушка сайта*/
 header {
   display: inline-block;
@@ -30,7 +32,7 @@ header > .top-menu > nav > ul {
 }
 nav {
   display: inline-block;
-  margin-right: 70px;
+  margin-right: 60px;
   vertical-align: middle;
 }
 nav > ul > li > a {
@@ -147,17 +149,14 @@ a:focus {
   margin-top: 100px;
   margin-bottom: 65px;
 }
-
+.red {
+  -webkit-box-shadow: 0px 0px 7px 1px rgba(0, 72, 255, 1);
+  -moz-box-shadow: 0px 0px 7px 1px rgba(0, 72, 255, 1);
+  box-shadow: 0px 0px 7px 1px rgba(0, 72, 255, 1);
+}
 /*Товар*/
 .mySlides {
   display: none;
-}
-.light-grey,
-.light-grey:hover,
-.light-grey,
-.light-grey:hover {
-  color: #000 !important;
-  background-color: #f1f1f1 !important;
 }
 .button-content > button {
   border: 0;
@@ -169,10 +168,23 @@ a:focus {
   width: 40px;
   height: 40px;
 }
+.content-photo > div:nth-child(1) > img:nth-child(1) {
+  position: absolute;
+  top: 50%;
+  right: 100%;
+  cursor: pointer;
+}
+.content-photo > div:nth-child(15) > img:nth-child(1) {
+  position: absolute;
+  cursor: pointer;
+  top: 50%;
+  left: 100%;
+}
 .content-photo {
   max-width: 600px;
   margin: 0 auto;
   text-align: center;
+  position: relative;
 }
 .content-photo > img {
   height: auto;
@@ -184,11 +196,73 @@ a:focus {
   display: inline-block;
   max-width: 890px;
 }
+.button-content {
+  margin-top: 20px;
+}
+.slick-initialized .slick-slide {
+  text-align: center;
+}
 /*информация о товаре*/
 .item-info {
   display: inline-block;
   vertical-align: top;
   max-width: 720px;
+}
+.item-info > p:nth-child(1) {
+  font-size: 25px;
+  color: rgb(0, 0, 0);
+  font-weight: bold;
+  margin-bottom: 10px;
+}
+.item-info > p:nth-child(2) {
+  font-size: 18px;
+  margin-top: 10px;
+  margin-bottom: 40px;
+}
+.item-info > span:nth-child(3) {
+  font-size: 23px;
+  color: rgb(33, 156, 193);
+  font-weight: bold;
+  margin-bottom: 5px;
+}
+.item-info > p:nth-child(4) {
+  font-size: 18px;
+  margin-top: 5px;
+  color: rgb(33, 156, 193);
+  font-weight: bold;
+  margin-bottom: 40px;
+}
+.price > label > span {
+  font-size: 14px;
+  font-weight: bold;
+  margin-right: 10px;
+}
+.price > label > input {
+  font-size: 14px;
+  font-weight: bold;
+  padding: 8px;
+  width: 60px;
+  margin-right: 50px;
+}
+.item-info > p:nth-child(6) {
+  font-size: 18px;
+  font-family: "Ubuntu";
+  font-weight: bold;
+  color: rgb(33, 156, 193);
+  line-height: 2.813;
+  margin: 0;
+}
+.item-info > p:nth-child(7) {
+  font-size: 18px;
+  font-family: "Arial";
+  color: rgb(0, 0, 0);
+  line-height: 1.667;
+  text-align: left;
+  margin: 0;
+}
+
+.price {
+  margin-bottom: 40px;
 }
 .add {
   border: 0;
@@ -213,10 +287,31 @@ a:focus {
 .text-photos {
   display: inline-block;
 }
+.text-photos > p:nth-child(1) {
+  font-size: 25px;
+  font-family: "Ubuntu";
+  color: rgb(0, 0, 0);
+  font-weight: bold;
+  text-transform: uppercase;
+  margin-left: 50px;
+}
+.text-photos > p:nth-child(2) {
+  font-size: 18px;
+  margin-left: 50px;
+}
 .add-photo {
   display: block;
   float: right;
-  margin-top: 3%;
+  margin-top: 3.5%;
+  border: 0px;
+  border-radius: 5px;
+  background-color: rgb(156, 195, 0);
+  width: 185px;
+  height: 40px;
+  font-size: 15px;
+  font-family: "Ubuntu";
+  color: rgb(255, 255, 255);
+  font-weight: bold;
 }
 .top-photo {
   margin-top: 70px;
@@ -235,14 +330,186 @@ a:focus {
   font-weight: bold;
   text-transform: uppercase;
 }
-.related-buy>img
-{
- display: inline-block;
- margin-right: 40px;
- margin-left: 40px;
+.related-buy > img {
+  display: inline-block;
+  margin-right: 40px;
+  margin-left: 40px;
 }
-.related-buy
-{
+.related-buy {
   text-align: center;
   margin-bottom: 130px;
 }
+/*футер*/
+footer {
+  background: #f3cf16;
+}
+.footer-info {
+  text-align: left;
+  width: 100%;
+  padding-bottom: 50px;
+  padding-top: 50px;
+  max-width: 1600px;
+  margin: 0 auto;
+}
+.getcoupons {
+  display: inline-block;
+  vertical-align: top;
+  margin-left: 40px;
+}
+.support,
+.aboutus,
+.connectwithus {
+  display: inline-block;
+  vertical-align: top;
+  margin-right: 60px;
+  margin-left: 40px;
+}
+hr {
+  color: red;
+  border: 0.5px solid;
+}
+.footer-info > div > p:nth-child(1) {
+  font-weight: bold;
+}
+.footer-info > div > p {
+  font-size: 14px;
+  color: rgb(0, 0, 0);
+  line-height: 1.5;
+}
+.img-block {
+  margin-bottom: 45px;
+}
+.img-block > img {
+  margin-right: 17px;
+}
+.getcoupons-inp > input {
+  background-color: rgb(255, 255, 255);
+  width: 100%;
+  max-width: 395px;
+  height: 7px;
+  padding: 20px;
+}
+
+.getcoupons-inp > button {
+  border-radius: 5px;
+  background-color: rgb(156, 195, 0);
+  border: 0px;
+  width: 145px;
+  height: 50px;
+  font-size: 14px;
+  font-family: "Ubuntu";
+  color: rgb(255, 255, 255);
+  font-weight: bold;
+  margin-right: 20px;
+  margin-left: 20px;
+}
+
+
+/*Мобильная версия*/
+@media (max-width:1460px)
+{
+    .content
+  {
+    text-align: center;
+  }
+
+  .item-info {
+    vertical-align: top;
+    text-align: left;
+}
+.top-photo
+{
+    text-align: left;
+}
+.add-photo
+{
+    margin-right: 20px;
+}
+}
+@media (max-width:1260px)
+{
+  .top-menu
+  {
+      text-align: center;
+  }
+  .top-menu > img,nav
+  {
+      display: inline;
+  }
+}
+@media (max-width:970px)
+{
+    .top-menu > ul, .top-menu > ul > li
+    {
+        display: inline;
+    }
+}
+@media (max-width:760px)
+{
+    .item-photo
+    {
+        max-width: 450px;
+    }
+    .content>.item-photo,.item-info,.photos
+    {
+        margin-left: 20px;
+        margin-right: 20px;
+    }
+    .related-buy > img
+    {
+        margin: 0px;
+        width: 100%;
+        height: auto;
+    }
+    .text-photos > p:nth-child(1),.text-photos > p:nth-child(2)
+    {
+        margin: 0px;
+    }
+    .content-photo > div:nth-child(1) > img:nth-child(1)
+    {
+        display: none;
+    }
+    .content-photo > div:nth-child(15) > img:nth-child(1)
+    {
+        display: none;
+    }
+    .content-photo > img
+    {
+    max-width: 300px;
+    max-height: 300px;
+    }
+    .add-photo
+    {
+        float: none;
+        clear: both;
+        margin-left: 0px;
+    }
+}
+@media (max-width:560px)
+{
+    .item-photo
+    {
+        max-width: 300px;
+    }
+    header > .top-menu > nav > ul
+    {
+        margin-left: 20px;
+        margin-right: 20px;
+    }
+    header > .top-menu > nav > ul > li
+    {
+        display: inline;
+    }
+    .getcoupons-inp > input,.getcoupons-inp > button
+    {
+        margin-bottom: 20px;
+        margin-top: 20px;
+        margin-left: 0px;
+        margin-right: 0px;
+    }
+    .getcoupons-inp > input
+    {
+      max-width: 200px;
+    }
+}
+
